--- a/blocpost.html
+++ b/blocpost.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="css/estilos.css"/>
 </head>
 <body>
+    <div id="container">
     <h1>Aquí vamos a hacer un blog post</h1>
     <p> Y este es el parrafo de inicio</p>
+    </div>
 </body>
 </html>
