--- a/blocpost.html
+++ b/blocpost.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            cabecera
+        </div>
     <h1>Aquí vamos a hacer un blog post</h1>
     <p> Y este es el parrafo de inicio</p>
     </div>
