--- a/blocpost.html
+++ b/blocpost.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="container">
-    <h1>Aquí vamos a hacer un blog post</h1>
+    <h1>Bienvenido a Hyperblog</h1>
     <p> Y este es el parrafo de inicio</p>
     </div>
 </body>
