--- a/blocpost.html
+++ b/blocpost.html
@@ -8,9 +8,12 @@
     <link rel="stylesheet" href="css/estilos.css"/>
 </head>
 <body>
+    <header></header>
     <div id="container">
     <h1>Bienvenido a Hyperblog 2.0</h1>
-    <p> Y este es el parrafo de inicio</p>
+    <p> What is Lorem Ipsum?
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
     </div>
+    <footer>Donate: If you use this site regularly and would like to help keep the site on the Internet, please consider donating a small sum to help pay for the hosting and bandwidth bill. There is no minimum donation, any sum is appreciated - click here to donate using PayPal. Thank you for your support.</footer>
 </body>
 </html>
